on-premise/on-prem-or-cloud-agnostic-kubernetes/cert-manager/myapp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: myapp
  # namespace: default
  namespace: tls
spec:
  #tls:
  #- secretName: myapp-tls-staging
  #  hosts:
  #  - myapp.newtech.academy
  rules:
    - host: myapp.newtech.academy
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp
                port:
                  number: 3000

# 주의
# nginx ingress로 배포하고 접속 시에는
# k get svc -n ingress-nginx의 NodePort로 접근!

# istio gt / vs로 배포하고 접속 할 시에는
# k get svc -n istio-system의 NodePort로 접근!
